--- a/ksp-science/ksp-science/ksp-science.csproj
+++ b/ksp-science/ksp-science/ksp-science.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DeltaV.cs" />
-    <Compile Include="gtk-gui\kspscience.DeltaV.cs" />
+    <Compile Include="gtk-gui\kspscience.Delta_V.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
